Edit index & css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
 
         <div class="sidebar-nav">
-            <div class="logo">Logo</div>
+            <div class="logo">Dashboard</div>
             <div class="menu">
-                <ul>
+                <ul class="nav">
                     <li>Home</li>
                     <li>Profile</li>
                     <li>Messages</li>
@@ -21,7 +21,7 @@
                     <li>Task</li>
                     <li>Communities</li>
                 </ul>
-                <ul>
+                <ul class="nav">
                     <li>Settings</li>
                     <li>Support</li>
                     <li>Privacy</li>
@@ -34,19 +34,25 @@
             <div class="top">
                 <div class="search">
                     <label for="search">
-                        <span class="search-icon">Search</span>
+                        <span class="gg-search"></span>
                     </label>
                     <input type="text" name="search" id="search">
                 </div>
                 <div class="account">
-                    <button class="notification">Notification Icon</button>
-                    <div class="picture">Profile Picture</div>
+                    <button>
+                        <span class="gg-notifications"></span>
+                    </button>
+                    <div>
+                        <span class="gg-profile"></span>
+                    </div>
                     <p class="name">Caleb Barnes</p>
                 </div>
             </div>
             <div class="bottom">
-                <div class="profile"></div>
-                    <div class="picture"></div>
+                <div class="profile">
+                    <div>
+                        <span class="gg-profile"></span>
+                    </div>
                     <div class="profile-name">
                         <p class="greetings">Hi there,</p>
                         <p class="username">Caleb Barnes (@barnes)</p>
@@ -70,54 +76,54 @@
                         <h5 class="card-title">Super Cool Project</h5>
                         <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
                         <div class="actions">
-                            <span class="card-icons">star</span>
-                            <span class="card-icons">visibilty</span>
-                            <span class="card-icons">new tab</span>
+                            <span class="gg-software-download"></span>
+                            <span class="gg-eye"></span>
+                            <span class="gg-tab"></span>
                         </div>
                     </div>
                     <div class="card">
                         <h5 class="card-title">Lame Cool Project</h5>
                         <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
                         <div class="actions">
-                            <span class="card-icons">star</span>
-                            <span class="card-icons">visibilty</span>
-                            <span class="card-icons">new tab</span>
+                            <span class="gg-software-download"></span>
+                            <span class="gg-eye"></span>
+                            <span class="gg-tab"></span>
                         </div>
                     </div>
                     <div class="card">
                         <h5 class="card-title">Boring Cool Project</h5>
                         <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
                         <div class="actions">
-                            <span class="card-icons">star</span>
-                            <span class="card-icons">visibilty</span>
-                            <span class="card-icons">new tab</span>
+                            <span class="gg-software-download"></span>
+                            <span class="gg-eye"></span>
+                            <span class="gg-tab"></span>
                         </div>
                     </div>
                     <div class="card">
                         <h5 class="card-title">Wack Cool Project</h5>
                         <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
                         <div class="actions">
-                            <span class="card-icons">star</span>
-                            <span class="card-icons">visibilty</span>
-                            <span class="card-icons">new tab</span>
+                            <span class="gg-software-download"></span>
+                            <span class="gg-eye"></span>
+                            <span class="gg-tab"></span>
                         </div>
                     </div>
                     <div class="card">
                         <h5 class="card-title">Clapped Cool Project</h5>
                         <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
                         <div class="actions">
-                            <span class="card-icons">star</span>
-                            <span class="card-icons">visibilty</span>
-                            <span class="card-icons">new tab</span>
+                            <span class="gg-software-download"></span>
+                            <span class="gg-eye"></span>
+                            <span class="gg-tab"></span>
                         </div>
                     </div>
                     <div class="card">
                         <h5 class="card-title">Very Cool Project</h5>
                         <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
                         <div class="actions">
-                            <span class="card-icons">star</span>
-                            <span class="card-icons">visibilty</span>
-                            <span class="card-icons">new tab</span>
+                            <span class="gg-software-download"></span>
+                            <span class="gg-eye"></span>
+                            <span class="gg-tab"></span>
                         </div>
                     </div>
                 </div>
@@ -129,15 +135,15 @@
                 <ul class="card">
                     <li class="announcement">
                         <h5 class="card-title">Site Maintenance</h5>
-                        <p class="card-text">" Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! "</p>
+                        <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit!</p>
                     </li>
                     <li class="announcement">
                         <h5 class="card-title">Community Share</h5>
-                        <p class="card-text">" Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! "</p>
+                        <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit!</p>
                     </li>
                     <li class="announcement">
                         <h5 class="card-title">Privacy Policy</h5>
-                        <p class="card-text">" Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! "</p>
+                        <p class="card-text">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit!</p>
                     </li>
                 </ul>
             </div>
@@ -147,28 +153,36 @@
                 <h3>Trending</h3>
                 <ul class="card">
                     <li class="trend trend-1">
-                        <div class="picture"></div>
+                        <div>
+                            <span class="gg-profile"></span>
+                        </div>
                         <div class="account">
                             <p class="username">@Smith</p>
                             <p class="name card-text">World Peace Builder</p>
                         </div>
                     </li>
                     <li class="trend trend-2">
-                        <div class="picture"></div>
+                        <div>
+                            <span class="gg-profile"></span>
+                        </div>
                         <div class="account">
                             <p class="username">@Norris</p>
                             <p class="name card-text">World Peace Builder</p>
                         </div>
                     </li>
                     <li class="trend trend-3">
-                        <div class="picture"></div>
+                        <div>
+                            <span class="gg-profile"></span>
+                        </div>
                         <div class="account">
                             <p class="username">@Hey</p>
                             <p class="name card-text">World Peace Builder</p>
                         </div>
                     </li>
                     <li class="trend trend-4">
-                        <div class="picture"></div>
+                        <div>
+                            <span class="gg-profile"></span>
+                        </div>
                         <div class="account">
                             <p class="username">@Barnes</p>
                             <p class="name card-text">World Peace Builder</p>
